--- a/doc/cfield.tex
+++ b/doc/cfield.tex
@@ -113,6 +113,7 @@ to experimental data (see section~\ref{simannfit}).
  B66  =  0.0003662       
 # instead of the Stevens parameters Blm 
 # second order crystal field parameters Dx^2 Dy^2 and Dz^2 can be entered in meV
+# - this coresponds to Hamiltonian H=+Dx2 Jx^2+Dy2 Jy^2+Dz2 Jz^2
 Dx2=0.1
 Dy2=0
 Dz2=0.4
@@ -159,31 +160,26 @@ factor $k'/k$ and the Debye Waller factor $exp(-W(Q))$ should be considered.
 Here comes the output file {\prg so1ion.out}:
 {\footnotesize
 \begin{verbatim}
-#{VERSION :   5.40      |
-#-------------------------------------------------------------- 
-#                   C F I E L D / S O 1 I O N                  |
+#{------------------------------------------------------------- 
+#                  C F I E L D / S O 1 I O N    5.50           |
 #                    A crystal field program                   |
 #               __________________________________              
 #              |         Peter  Hoffmann          |             
 #              |    Forschungszentrum Juelich     |             
 #              |Institut fuer Festkoerperforschung|             
-#              |Tel.: 02461-616896                |             
 #               __________________________________              
-#                          O U T P U T                         
+#    O U T P U T         Sat May 14 10:07:52 2011
 #-------------------------------------------------------------- 
-#!Temperature of the sample       T=   2.00 Kelvin                
+#!Temperature of the sample       T=  10.00 Kelvin                
 #!Ion                    IONTYPE= Nd3+                          
 #!Lande factor of the ion   gJ= 0.727273                       
 #                                                              
 # Total angular momentum J of the                               
 #!Spin - orbit - level     J=  4.5                            
 #!Electrons in 4f shell   Ne=  3                              
-#  local point symmetry                                        
-#! of the ion              PS= triklin                               
-#! Symmetry_number            = 0                              
 #-------------------------------------------------------------- 
 # Parameter           :  Akq   in  meV   /a0**k                  
-# (compare Hutchings p 255 eq 5.5)                             
+# (compare Hutchings Solid State Physics 16 (1964) 227, p 255 eq 5.5)                             
 #!A20  =        -16.306372                                     
 #!A22  =        -18.737280                                     
 #                                                              
@@ -198,7 +194,7 @@ Here comes the output file {\prg so1ion.out}:
 #-------------------------------------------------------------- 
 #-------------------------------------------------------------- 
 # Parameter           :  Bkq   in  meV                           
-#                        (Stevens Parameters comp Hutchings)
+#                        Bkq are the Stevens Parameters  - see Hutchings Solid State Physics 16 (1964) 227
 #!B20  =          0.116765                                     
 #!B22  =          0.134172                                     
 #                                                              
@@ -227,7 +223,7 @@ Here comes the output file {\prg so1ion.out}:
 #-------------------------------------------------------------- 
 #-------------------------------------------------------------- 
 # Parameter           :  Lkq   in  meV                           
-#                        (Wyborne Parameters comp Kassmann)
+#                        Lkq are the Wybourne Parameters - see A. Kassmann J. Chem. Phys. 53 (1970) 4118
 #!L20  =        -36.330596                                     
 #!L22  =        -17.043002                                     
 #                                                              
@@ -269,57 +265,35 @@ Here comes the output file {\prg so1ion.out}:
 #!W64 =          -0.036868                                     
 #!W66 =          -0.320689                                     
 #-------------------------------------------------------------- 
-#
 #-------------------------------------------------------------- 
-#                   Magnetic field B in Tesla .                    
-#                                                              
-#                   H = H   +  H       + H                     
-#                        CF     mag_ex    mag_mol              
-#                                                              
-#--------------------------------------------------------------
-#                                                              
-#  H        = - g  my   J  B                                   
-#   mag_ex       J   B  -  - ex                                
-#                                                              
-#--------------------------------------------------------------
-#                                                              
-#  H        = - 2 ( g - 1 ) my   J  B                          
-#   mag_mol          J        B  -  - mol                      
-#                                                              
-#--------------------------------------------------------------
-#                                                              
-#! Bx_ex   =          0.00                                     
-#! By_ex   =          0.00                                     
-#! Bz_ex   =          3.00                                     
-#                                                              
-#! Bx_mol  =          0.00                                     
-#! By_mol  =          0.00                                     
-#! Bz_mol  =          0.00                                     
-#                                                              
+#                Anisotropy parameters in meV.                  
+#-------------------------------------------------------------- 
+#         H= + Dx2 Jx ^ 2+ Dy2 Jy ^ 2+ Dz2 Jz ^ 2               
+#! Dx2 =          0.10                                     
+#! Dy2 =          0.00                                     
+#! Dz2 =          0.40                                     
 #                                                              
 #-------------------------------------------------------------- 
-#
-#
 #-------------------------------------------------------------- 
 # Energy Eigenvalues are in  meV   .          	            
 #--------------------------------------------------------------
 #!Nr of different energy levels   noflevels=10                 
-#!Energy shift   Eshift=                       -6.1829 
+#!Energy shift   Eshift=                       -2.6744 
 #                                                              
 # Because of the calibration freedom the smallest energy       
 # eigenvalue is shifted to zero. You can get the energy        
 # eigen-value of the applied eigen-value problem               
 # by shifting the energy by the added energy value above       
 #!*E( 1)=        0.0000        Degeneracy =   1 -fold            
-#!*E( 2)=        0.6253        Degeneracy =   1 -fold            
-#!*E( 3)=        3.2216        Degeneracy =   1 -fold            
-#!*E( 4)=        3.2555        Degeneracy =   1 -fold            
-#!*E( 5)=        5.2391        Degeneracy =   1 -fold            
-#!*E( 6)=        5.3833        Degeneracy =   1 -fold            
-#!*E( 7)=        7.5859        Degeneracy =   1 -fold            
-#!*E( 8)=        7.5951        Degeneracy =   1 -fold            
-#!*E( 9)=       13.9267        Degeneracy =   1 -fold            
-#! E(10)=       14.9961        Degeneracy =   1 -fold            
+#!*E( 2)=        0.0000        Degeneracy =   1 -fold            
+#!*E( 3)=        2.4850        Degeneracy =   1 -fold            
+#!*E( 4)=        2.4850        Degeneracy =   1 -fold            
+#!*E( 5)=        4.5048        Degeneracy =   1 -fold            
+#!*E( 6)=        4.5048        Degeneracy =   1 -fold            
+#!*E( 7)=        7.8548        Degeneracy =   1 -fold            
+#!*E( 8)=        7.8548        Degeneracy =   1 -fold            
+#!*E( 9)=       19.1522        Degeneracy =   1 -fold            
+#!*E(10)=       19.1522        Degeneracy =   1 -fold            
 # Them with  *  marked Energy eigenvalues have a non-          
 # vanishing Matrix element of the Ground state E( 1).          
 #-------------------------------------------------------------- 
@@ -343,7 +317,7 @@ Here comes the output file {\prg so1ion.out}:
 # at the lowest Spin-orbit-level (Ground state)                
 #                                                              
 # 2S+1                                                         
-#     L  of the calualted Ion. The |i,r> are in                
+#     L  of the calculated Ion. The |i,r> are in               
 #      J                                                       
 #                                                              
 # a more developed  Eigenfunction   			    
@@ -357,69 +331,69 @@ Here comes the output file {\prg so1ion.out}:
 #                                         J  J                 
 #--------------------------------------------------------------
 #                                                              
-# I 1, 1> =     0.0424               I 4.5  -4.5>              
-#          -    0.3284               I 4.5  -2.5>              
-#          +    0.0834               I 4.5  -0.5>              
-#          -    0.2234               I 4.5   1.5>              
-#          +    0.9130               I 4.5   3.5>              
+# I 1, 1> =     0.0414               I 4.5  -4.5>              
+#          -    0.3955               I 4.5  -2.5>              
+#          +    0.7083               I 4.5  -0.5>              
+#          -    0.4563               I 4.5   1.5>              
+#          +    0.3633               I 4.5   3.5>              
 #                                                              
-# I 2, 1> =     0.8586               I 4.5  -3.5>              
-#          -    0.2351               I 4.5  -1.5>              
-#          +    0.1475               I 4.5   0.5>              
-#          -    0.4274               I 4.5   2.5>              
-#          +    0.0560               I 4.5   4.5>              
+# I 2, 1> =     0.3633               I 4.5  -3.5>              
+#          -    0.4563               I 4.5  -1.5>              
+#          +    0.7083               I 4.5   0.5>              
+#          -    0.3955               I 4.5   2.5>              
+#          +    0.0414               I 4.5   4.5>              
 #                                                              
-# I 3, 1> =     0.3625               I 4.5  -3.5>              
-#          +    0.2363               I 4.5  -1.5>              
-#          -    0.8490               I 4.5   0.5>              
-#          +    0.3025               I 4.5   2.5>              
-#          -    0.0207               I 4.5   4.5>              
+# I 3, 1> =    -0.0402               I 4.5  -4.5>              
+#          +    0.1455               I 4.5  -2.5>              
+#          +    0.5713               I 4.5  -0.5>              
+#          +    0.1221               I 4.5   1.5>              
+#          -    0.7975               I 4.5   3.5>              
 #                                                              
-# I 4, 1> =     0.0279               I 4.5  -4.5>              
-#          -    0.2959               I 4.5  -2.5>              
-#          +    0.8547               I 4.5  -0.5>              
-#          -    0.3316               I 4.5   1.5>              
-#          -    0.2669               I 4.5   3.5>              
+# I 4, 1> =     0.7975               I 4.5  -3.5>              
+#          -    0.1221               I 4.5  -1.5>              
+#          -    0.5713               I 4.5   0.5>              
+#          -    0.1455               I 4.5   2.5>              
+#          +    0.0402               I 4.5   4.5>              
 #                                                              
-# I 5, 1> =     0.1624               I 4.5  -3.5>              
-#          -    0.6457               I 4.5  -1.5>              
-#          +    0.1503               I 4.5   0.5>              
-#          +    0.7305               I 4.5   2.5>              
-#          -    0.0205               I 4.5   4.5>              
+# I 5, 1> =    -0.0255               I 4.5  -3.5>              
+#          -    0.7164               I 4.5  -1.5>              
+#          -    0.0601               I 4.5   0.5>              
+#          +    0.6945               I 4.5   2.5>              
+#          -    0.0098               I 4.5   4.5>              
 #                                                              
-# I 6, 1> =     0.0010               I 4.5  -4.5>              
-#          +    0.7060               I 4.5  -2.5>              
-#          -    0.0029               I 4.5  -0.5>              
-#          -    0.7034               I 4.5   1.5>              
-#          +    0.0821               I 4.5   3.5>              
+# I 6, 1> =     0.0098               I 4.5  -4.5>              
+#          -    0.6945               I 4.5  -2.5>              
+#          +    0.0601               I 4.5  -0.5>              
+#          +    0.7164               I 4.5   1.5>              
+#          +    0.0255               I 4.5   3.5>              
 #                                                              
-# I 7, 1> =     0.3206               I 4.5  -3.5>              
-#          +    0.6617               I 4.5  -1.5>              
-#          +    0.4732               I 4.5   0.5>              
-#          +    0.4090               I 4.5   2.5>              
-#          -    0.2610               I 4.5   4.5>              
+# I 7, 1> =     0.4804               I 4.5  -3.5>              
+#          +    0.5046               I 4.5  -1.5>              
+#          +    0.4065               I 4.5   0.5>              
+#          +    0.5712               I 4.5   2.5>              
+#          -    0.1522               I 4.5   4.5>              
 #                                                              
-# I 8, 1> =    -0.2262               I 4.5  -4.5>              
-#          +    0.5337               I 4.5  -2.5>              
-#          +    0.5046               I 4.5  -0.5>              
-#          +    0.5676               I 4.5   1.5>              
-#          +    0.2953               I 4.5   3.5>              
+# I 8, 1> =    -0.1522               I 4.5  -4.5>              
+#          +    0.5712               I 4.5  -2.5>              
+#          +    0.4065               I 4.5  -0.5>              
+#          +    0.5046               I 4.5   1.5>              
+#          +    0.4804               I 4.5   3.5>              
 #                                                              
-# I 9, 1> =     0.0482               I 4.5  -3.5>              
-#          +    0.1844               I 4.5  -1.5>              
-#          +    0.1046               I 4.5   0.5>              
-#          +    0.1577               I 4.5   2.5>              
-#          +    0.9633               I 4.5   4.5>              
+# I 9, 1> =     0.9866               I 4.5  -4.5>              
+#          +    0.1175               I 4.5  -2.5>              
+#          +    0.0557               I 4.5  -0.5>              
+#          +    0.0948               I 4.5   1.5>              
+#          +    0.0261               I 4.5   3.5>              
 #                                                              
-# I10, 1> =     0.9728               I 4.5  -4.5>              
-#          +    0.1462               I 4.5  -2.5>              
-#          +    0.0892               I 4.5  -0.5>              
-#          +    0.1520               I 4.5   1.5>              
-#          +    0.0364               I 4.5   3.5>              
+# I10, 1> =     0.0261               I 4.5  -3.5>              
+#          +    0.0948               I 4.5  -1.5>              
+#          +    0.0557               I 4.5   0.5>              
+#          +    0.1175               I 4.5   2.5>              
+#          +    0.9866               I 4.5   4.5>              
 #                                                              
 #-------------------------------------------------------------- 
 #
-#!magnetic moment(mb/f.u.): mx= 0.000 my= 0.000 mz= 1.880
+#!magnetic moment(mb/f.u.): mx= 0.000 my= 0.000 mz= 0.000
 #
 #-------------------------------------------------------------- 
 #                                                              
@@ -434,115 +408,115 @@ Here comes the output file {\prg so1ion.out}:
 #    a  <-->  b      |<a|J |b>|  |  |<a|J |b>|  |  |<a|J |b>|  
 #                         x      |       y      |       z      
 #--------------------------------+--------------+--------------
-#    1  <-->  1       0.000000   |   0.000000   |   7.349037   
+#    1  <-->  1       0.000000   |   0.000000   |   0.015521   
 #--------------------------------+--------------+--------------
-#    2  <-->  1       0.837715   |   4.124524   |   0.000000   
+#    2  <-->  1       0.001004   |  18.355706   |   0.000000   
 #--------------------------------+--------------+--------------
-#    2  <-->  2       0.000000   |   0.000000   |   4.757295   
+#    2  <-->  2       0.000000   |   0.000000   |   0.015521   
 #--------------------------------+--------------+--------------
-#    3  <-->  1       0.097402   |   1.800867   |   0.000000   
+#    3  <-->  1       0.000000   |   0.000000   |   1.319048   
 #--------------------------------+--------------+--------------
-#    3  <-->  2       0.000000   |   0.000000   |   1.951770   
+#    3  <-->  2       0.974710   |   0.135045   |   0.000000   
 #--------------------------------+--------------+--------------
-#    3  <-->  3       0.000000   |   0.000000   |   0.002243   
+#    3  <-->  3       0.000000   |   0.000000   |   4.099974   
 #--------------------------------+--------------+--------------
-#    4  <-->  1       0.000000   |   0.000000   |   1.052055   
+#    4  <-->  1       0.974710   |   0.135045   |   0.000000   
 #--------------------------------+--------------+--------------
-#    4  <-->  2       0.006254   |   2.906196   |   0.000000   
+#    4  <-->  2       0.000000   |   0.000000   |   1.319048   
 #--------------------------------+--------------+--------------
-#    4  <-->  3       1.883036   |   8.933883   |   0.000000   
+#    4  <-->  3       0.758792   |   1.245008   |   0.000000   
 #--------------------------------+--------------+--------------
-#    4  <-->  4       0.000000   |   0.000000   |   0.030053   
+#    4  <-->  4       0.000000   |   0.000000   |   4.099974   
 #--------------------------------+--------------+--------------
-#    5  <-->  1       1.296760   |   0.787532   |   0.000000   
+#    5  <-->  1       0.707679   |   0.212437   |   0.000000   
 #--------------------------------+--------------+--------------
-#    5  <-->  2       0.000000   |   0.000000   |   2.221074   
+#    5  <-->  2       0.000000   |   0.000000   |   1.363570   
 #--------------------------------+--------------+--------------
-#    5  <-->  3       0.000000   |   0.000000   |   0.263606   
+#    5  <-->  3       5.074447   |   4.074804   |   0.000000   
 #--------------------------------+--------------+--------------
-#    5  <-->  4       3.031073   |   4.748191   |   0.000000   
+#    5  <-->  4       0.000000   |   0.000000   |   0.088373   
 #--------------------------------+--------------+--------------
-#    5  <-->  5       0.000000   |   0.000000   |   0.396361   
+#    5  <-->  5       0.000000   |   0.000000   |   0.190099   
 #--------------------------------+--------------+--------------
-#    6  <-->  1       0.000000   |   0.000000   |   1.160910   
+#    6  <-->  1       0.000000   |   0.000000   |   1.363570   
 #--------------------------------+--------------+--------------
-#    6  <-->  2       1.453148   |   0.329358   |   0.000000   
+#    6  <-->  2       0.707679   |   0.212437   |   0.000000   
 #--------------------------------+--------------+--------------
-#    6  <-->  3       3.692640   |   4.510482   |   0.000000   
+#    6  <-->  3       0.000000   |   0.000000   |   0.088373   
 #--------------------------------+--------------+--------------
-#    6  <-->  4       0.000000   |   0.000000   |   0.634606   
+#    6  <-->  4       5.074447   |   4.074804   |   0.000000   
 #--------------------------------+--------------+--------------
-#    6  <-->  5       4.539708   |   5.382444   |   0.000000   
+#    6  <-->  5       4.539309   |   5.809709   |   0.000000   
 #--------------------------------+--------------+--------------
-#    6  <-->  6       0.000000   |   0.000000   |   0.230677   
+#    6  <-->  6       0.000000   |   0.000000   |   0.190099   
 #--------------------------------+--------------+--------------
-#    7  <-->  1       0.284349   |   1.844604   |   0.000000   
+#    7  <-->  1       0.004687   |   0.712016   |   0.000000   
 #--------------------------------+--------------+--------------
-#    7  <-->  2       0.000000   |   0.000000   |   1.435031   
+#    7  <-->  2       0.000000   |   0.000000   |   0.510509   
 #--------------------------------+--------------+--------------
-#    7  <-->  3       0.000000   |   0.000000   |   0.258615   
+#    7  <-->  3       1.250403   |   1.010350   |   0.000000   
 #--------------------------------+--------------+--------------
-#    7  <-->  4       0.926445   |   0.049897   |   0.000000   
+#    7  <-->  4       0.000000   |   0.000000   |   2.559069   
 #--------------------------------+--------------+--------------
-#    7  <-->  5       0.000000   |   0.000000   |   1.601018   
+#    7  <-->  5       0.000000   |   0.000000   |   2.469261   
 #--------------------------------+--------------+--------------
-#    7  <-->  6       0.005768   |   0.457608   |   0.000000   
+#    7  <-->  6       0.119944   |   0.002240   |   0.000000   
 #--------------------------------+--------------+--------------
-#    7  <-->  7       0.000000   |   0.000000   |   0.032325   
+#    7  <-->  7       0.000000   |   0.000000   |   0.035028   
 #--------------------------------+--------------+--------------
-#    8  <-->  1       0.000000   |   0.000000   |   1.472943   
+#    8  <-->  1       0.000000   |   0.000000   |   0.510509   
 #--------------------------------+--------------+--------------
-#    8  <-->  2       0.119332   |   2.256706   |   0.000000   
+#    8  <-->  2       0.004687   |   0.712016   |   0.000000   
 #--------------------------------+--------------+--------------
-#    8  <-->  3       0.711683   |   0.039222   |   0.000000   
+#    8  <-->  3       0.000000   |   0.000000   |   2.559069   
 #--------------------------------+--------------+--------------
-#    8  <-->  4       0.000000   |   0.000000   |   0.122925   
+#    8  <-->  4       1.250403   |   1.010350   |   0.000000   
 #--------------------------------+--------------+--------------
-#    8  <-->  5       0.091000   |   0.073150   |   0.000000   
+#    8  <-->  5       0.119944   |   0.002240   |   0.000000   
 #--------------------------------+--------------+--------------
-#    8  <-->  6       0.000000   |   0.000000   |   2.114855   
+#    8  <-->  6       0.000000   |   0.000000   |   2.469261   
 #--------------------------------+--------------+--------------
-#    8  <-->  7      14.237466   |   0.119658   |   0.000000   
+#    8  <-->  7      13.082200   |   0.345494   |   0.000000   
 #--------------------------------+--------------+--------------
-#    8  <-->  8       0.000000   |   0.000000   |   0.078994   
+#    8  <-->  8       0.000000   |   0.000000   |   0.035028   
 #--------------------------------+--------------+--------------
-#    9  <-->  1       1.853194   |   0.788092   |   0.000000   
+#    9  <-->  1       0.000000   |   0.000000   |   0.014163   
 #--------------------------------+--------------+--------------
-#    9  <-->  2       0.000000   |   0.000000   |   0.000005   
+#    9  <-->  2       0.355284   |   0.068622   |   0.000000   
 #--------------------------------+--------------+--------------
-#    9  <-->  3       0.000000   |   0.000000   |   0.020033   
+#    9  <-->  3       0.000000   |   0.000000   |   0.004132   
 #--------------------------------+--------------+--------------
-#    9  <-->  4       0.046976   |   0.352198   |   0.000000   
+#    9  <-->  4       1.141146   |   1.014699   |   0.000000   
 #--------------------------------+--------------+--------------
-#    9  <-->  5       0.000000   |   0.000000   |   0.128492   
+#    9  <-->  5       0.028839   |   0.000051   |   0.000000   
 #--------------------------------+--------------+--------------
-#    9  <-->  6       0.005534   |   0.062238   |   0.000000   
+#    9  <-->  6       0.000000   |   0.000000   |   0.069239   
 #--------------------------------+--------------+--------------
-#    9  <-->  7       0.000000   |   0.000000   |   1.398393   
+#    9  <-->  7       1.762031   |   0.511979   |   0.000000   
 #--------------------------------+--------------+--------------
-#    9  <-->  8       2.221975   |   0.206978   |   0.000000   
+#    9  <-->  8       0.000000   |   0.000000   |   0.374789   
 #--------------------------------+--------------+--------------
-#    9  <-->  9       0.000000   |   0.000000   |  17.505703   
+#    9  <-->  9       0.000000   |   0.000000   |  19.365074   
 #--------------------------------+--------------+--------------
-#   10  <-->  1       0.000000   |   0.000000   |   0.000017   
+#   10  <-->  1       0.355284   |   0.068622   |   0.000000   
 #--------------------------------+--------------+--------------
-#   10  <-->  2       1.649987   |   0.701605   |   0.000000   
+#   10  <-->  2       0.000000   |   0.000000   |   0.014163   
 #--------------------------------+--------------+--------------
-#   10  <-->  3       0.149440   |   0.435077   |   0.000000   
+#   10  <-->  3       1.141146   |   1.014699   |   0.000000   
 #--------------------------------+--------------+--------------
-#   10  <-->  4       0.000000   |   0.000000   |   0.026213   
+#   10  <-->  4       0.000000   |   0.000000   |   0.004132   
 #--------------------------------+--------------+--------------
-#   10  <-->  5       0.104403   |   0.085187   |   0.000000   
+#   10  <-->  5       0.000000   |   0.000000   |   0.069239   
 #--------------------------------+--------------+--------------
-#   10  <-->  6       0.000000   |   0.000000   |   0.170024   
+#   10  <-->  6       0.028839   |   0.000051   |   0.000000   
 #--------------------------------+--------------+--------------
-#   10  <-->  7       1.869528   |   0.229295   |   0.000000   
+#   10  <-->  7       0.000000   |   0.000000   |   0.374789   
 #--------------------------------+--------------+--------------
-#   10  <-->  8       0.000000   |   0.000000   |   0.883112   
+#   10  <-->  8       1.762031   |   0.511979   |   0.000000   
 #--------------------------------+--------------+--------------
-#   10  <-->  9       0.135184   |   0.025006   |   0.000000   
+#   10  <-->  9       0.030356   |   0.009597   |   0.000000   
 #--------------------------------+--------------+--------------
-#   10  <--> 10       0.000000   |   0.000000   |  18.285922   
+#   10  <--> 10       0.000000   |   0.000000   |  19.365074   
 #-------------------------------------------------------------- 
 #
 #
@@ -576,35 +550,35 @@ Here comes the output file {\prg so1ion.out}:
 #E \ k|E  |E  |E  |E  |E  |E  |E  |E  |E  |E  |len|
 # i \ | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10|sum|
 #----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |  4|  3|  1|   |  1|   |  1|   |  1|   | 16|
-#|  1 |.90|.31|.27|.70|.39|.77|.42|.98|.76|   |.50|
+#| E  |   | 12|   |   |   |   |   |   |   |   | 16|
+#|  1 |.01|.24|.88|.74|.61|.91|.48|.34|.01|.28|.50|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |  3|  3|  1|  1|  1|  1|   |  1|   |  1| 16|
-#|  2 |.31|.17|.30|.94|.48|.19|.96|.58|   |.57|.50|
+#| E  | 12|   |   |   |   |   |   |   |   |   | 16|
+#|  2 |.24|.01|.74|.88|.91|.61|.34|.48|.28|.01|.50|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |  1|  1|   |  7|   |  5|   |   |   |   | 16|
-#|  3 |.27|.30|   |.21|.18|.47|.17|.50|.01|.39|.50|
+#| E  |   |   |  2|  1|  6|   |  1|  1|   |  1| 16|
+#|  3 |.88|.74|.73|.34|.10|.06|.51|.71|   |.44|.50|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |  1|  7|   |  5|   |   |   |   |   | 16|
-#|  4 |.70|.94|.21|.02|.19|.42|.65|.08|.27|.02|.50|
+#| E  |   |   |  1|  2|   |  6|  1|  1|  1|   | 16|
+#|  4 |.74|.88|.34|.73|.06|.10|.71|.51|.44|   |.50|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |  1|  1|   |  5|   |  6|  1|   |   |   | 16|
-#|  5 |.39|.48|.18|.19|.26|.61|.07|.11|.09|.13|.50|
+#| E  |   |   |  6|   |   |  6|  1|   |   |   | 16|
+#|  5 |.61|.91|.10|.06|.13|.90|.65|.08|.02|.05|.50|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |  1|  5|   |  6|   |   |  1|   |   | 16|
-#|  6 |.77|.19|.47|.42|.61|.15|.31|.41|.05|.11|.50|
+#| E  |   |   |   |  6|  6|   |   |  1|   |   | 16|
+#|  6 |.91|.61|.06|.10|.90|.13|.08|.65|.05|.02|.50|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |  1|   |   |   |  1|   |   |  9|   |  1| 16|
-#|  7 |.42|.96|.17|.65|.07|.31|.02|.57|.93|.40|.50|
+#| E  |   |   |  1|  1|  1|   |   |  8|  1|   | 16|
+#|  7 |.48|.34|.51|.71|.65|.08|.02|.95|.52|.25|.50|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |  1|   |   |   |  1|  9|   |  1|   | 16|
-#|  8 |.98|.58|.50|.08|.11|.41|.57|.05|.62|.59|.50|
+#| E  |   |   |  1|  1|   |  1|  8|   |   |  1| 16|
+#|  8 |.34|.48|.71|.51|.08|.65|.95|.02|.25|.52|.50|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |  1|   |   |   |   |   |   |  1| 11|   | 16|
-#|  9 |.76|   |.01|.27|.09|.05|.93|.62|.67|.11|.50|
+#| E  |   |   |   |  1|   |   |  1|   | 12|   | 16|
+#|  9 |.01|.28|   |.44|.02|.05|.52|.25|.91|.03|.50|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |  1|   |   |   |   |  1|   |   | 12| 16|
-#|  10|   |.57|.39|.02|.13|.11|.40|.59|.11|.19|.50|
+#| E  |   |   |  1|   |   |   |   |  1|   | 12| 16|
+#|  10|.28|.01|.44|   |.05|.02|.25|.52|.03|.91|.50|
 # ------------------------------------------------ 
 #
 #
@@ -667,9 +641,9 @@ Here comes the output file {\prg so1ion.out}:
 #                    i    k                                    
 #-------------------------------------------------------------- 
 #-------------------------------------------------------------- 
-#!Temperature of the sample               T=    2.00 Kelvin         
+#!Temperature of the sample               T=   10.00 Kelvin         
 #-------------------------------------------------------------- 
-#!parition function            Z  =   1.03                 
+#!parition function            Z  =   2.12                 
 #-------------------------------------------------------------- 
 #!Total_magnetic_scattering_intensity =   7.94 barn            
 #-------------------------------------------------------------- 
@@ -678,23 +652,23 @@ Here comes the output file {\prg so1ion.out}:
 #E \ k|E  |E  |E  |E  |E  |E  |E  |E  |E  |E  |len|
 # i \ | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10|sum|
 #----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |  2|  1|   |   |   |   |   |   |   |   |  7|
-#|  1 |.30|.55|.59|.33|.65|.36|.67|.46|.83|   |.74|
+#| E  |   |  2|   |   |   |   |   |   |   |   |  3|
+#|  1 |   |.78|.20|.17|.14|.21|.11|.08|   |.06|.74|
+#|----|---|---|---|---|---|---|---|---|---|---|---|
+#| E  |  2|   |   |   |   |   |   |   |   |   |  3|
+#|  2 |.78|   |.17|.20|.21|.14|.08|.11|.06|   |.74|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
 #| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  2 |.04|.04|.02|.02|.02|.01|.01|.02|   |.02|.21|
+#|  3 |.01|.01|.03|.02|.08|   |.02|.02|   |.02|.21|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
 #| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  3 |   |   |   |   |   |   |   |   |   |   |   |
+#|  4 |.01|.01|.02|.03|   |.08|.02|.02|.02|   |.21|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
 #| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  4 |   |   |   |   |   |   |   |   |   |   |   |
+#|  5 |   |   |.01|   |   |.01|   |   |   |   |.02|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
 #| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  5 |   |   |   |   |   |   |   |   |   |   |   |
-#|----|---|---|---|---|---|---|---|---|---|---|---|
-#| E  |   |   |   |   |   |   |   |   |   |   |   |
-#|  6 |   |   |   |   |   |   |   |   |   |   |   |
+#|  6 |   |   |   |.01|.01|   |   |   |   |   |.02|
 #|----|---|---|---|---|---|---|---|---|---|---|---|
 #| E  |   |   |   |   |   |   |   |   |   |   |   |
 #|  7 |   |   |   |   |   |   |   |   |   |   |   |
@@ -710,120 +684,120 @@ Here comes the output file {\prg so1ion.out}:
 # ------------------------------------------------ 
 #
 #-----------------------------------------------------------
-#!Total_quasielastic_intensity =             2.34 barn           
+#!Total_quasielastic_intensity =             0.07 barn           
 #-----------------------------------------------------------
 #                  Neutron-Energy-loss                      
-#!middle_position_of_the_energy        =        0.65 meV    
-#!relative_error_in_the_middl_Position  =        6.25 %      
-#!Intensity_of_the_middle_position   =        1.57 barn   
+#!middle_position_of_the_energy        =        0.14 meV    
+#!relative_error_in_the_middl_Position  =      188.64 %      
+#!Intensity_of_the_middle_position   =        2.97 barn   
 #                  Neutron-Energy-Gain                 
-#!middle position of the energy        =       -0.63 meV    
-#!relative_error_in_the_middl_Position  =        0.00 %      
-#!Intensity_of_the_middle_position   =        0.04 barn   
+#!middle position of the energy        =       -0.01 meV    
+#!relative_error_in_the_middl_Position  =      199.33 %      
+#!Intensity_of_the_middle_position   =        2.81 barn   
 #-----------------------------------------------------------
 
 #-------------------------------------------------------------- 
 # Transition Energy (meV   ) vs Intensity (barn)                  
 #-------------------------------------------------------------- }
-  0.00   2.30
-  0.63   1.55
-  3.22   0.59
-  3.26   0.33
-  5.24   0.65
-  5.38   0.36
-  7.59   0.67
-  7.60   0.46
- 13.93   0.83
- 15.00   0.00
- -0.63   0.04
-  0.00   0.04
-  2.60   0.02
-  2.63   0.02
-  4.61   0.02
-  4.76   0.01
-  6.96   0.01
-  6.97   0.02
- 13.30   0.00
- 14.37   0.02
- -3.22   0.00
- -2.60   0.00
   0.00   0.00
-  0.03   0.00
+  0.00   2.78
+  2.49   0.20
+  2.49   0.17
+  4.50   0.14
+  4.50   0.21
+  7.85   0.11
+  7.85   0.08
+ 19.15   0.00
+ 19.15   0.06
+ -0.00   2.78
+  0.00   0.00
+  2.49   0.17
+  2.49   0.20
+  4.50   0.21
+  4.50   0.14
+  7.85   0.08
+  7.85   0.11
+ 19.15   0.06
+ 19.15   0.00
+ -2.49   0.01
+ -2.49   0.01
+  0.00   0.03
+  0.00   0.02
+  2.02   0.08
   2.02   0.00
-  2.16   0.00
-  4.36   0.00
-  4.37   0.00
- 10.71   0.00
- 11.77   0.00
- -3.26   0.00
- -2.63   0.00
- -0.03   0.00
-  0.00   0.00
-  1.98   0.00
-  2.13   0.00
-  4.33   0.00
-  4.34   0.00
- 10.67   0.00
- 11.74   0.00
- -5.24   0.00
- -4.61   0.00
+  5.37   0.02
+  5.37   0.02
+ 16.67   0.00
+ 16.67   0.02
+ -2.49   0.01
+ -2.49   0.01
+ -0.00   0.02
+  0.00   0.03
+  2.02   0.00
+  2.02   0.08
+  5.37   0.02
+  5.37   0.02
+ 16.67   0.02
+ 16.67   0.00
+ -4.50   0.00
+ -4.50   0.00
+ -2.02   0.01
  -2.02   0.00
- -1.98   0.00
   0.00   0.00
-  0.14   0.00
-  2.35   0.00
-  2.36   0.00
-  8.69   0.00
-  9.76   0.00
- -5.38   0.00
- -4.76   0.00
- -2.16   0.00
- -2.13   0.00
- -0.14   0.00
+  0.00   0.01
+  3.35   0.00
+  3.35   0.00
+ 14.65   0.00
+ 14.65   0.00
+ -4.50   0.00
+ -4.50   0.00
+ -2.02   0.00
+ -2.02   0.01
+ -0.00   0.01
   0.00   0.00
-  2.20   0.00
-  2.21   0.00
-  8.54   0.00
-  9.61   0.00
- -7.59   0.00
- -6.96   0.00
- -4.36   0.00
- -4.33   0.00
- -2.35   0.00
- -2.20   0.00
+  3.35   0.00
+  3.35   0.00
+ 14.65   0.00
+ 14.65   0.00
+ -7.85   0.00
+ -7.85   0.00
+ -5.37   0.00
+ -5.37   0.00
+ -3.35   0.00
+ -3.35   0.00
   0.00   0.00
-  0.01   0.00
-  6.34   0.00
-  7.41   0.00
- -7.60   0.00
- -6.97   0.00
- -4.37   0.00
- -4.34   0.00
- -2.36   0.00
- -2.21   0.00
- -0.01   0.00
   0.00   0.00
-  6.33   0.00
-  7.40   0.00
--13.93   0.00
--13.30   0.00
--10.71   0.00
--10.67   0.00
- -8.69   0.00
- -8.54   0.00
- -6.34   0.00
- -6.33   0.00
+ 11.30   0.00
+ 11.30   0.00
+ -7.85   0.00
+ -7.85   0.00
+ -5.37   0.00
+ -5.37   0.00
+ -3.35   0.00
+ -3.35   0.00
+ -0.00   0.00
   0.00   0.00
-  1.07   0.00
--15.00   0.00
--14.37   0.00
--11.77   0.00
--11.74   0.00
- -9.76   0.00
- -9.61   0.00
- -7.41   0.00
- -7.40   0.00
- -1.07   0.00
+ 11.30   0.00
+ 11.30   0.00
+-19.15   0.00
+-19.15   0.00
+-16.67   0.00
+-16.67   0.00
+-14.65   0.00
+-14.65   0.00
+-11.30   0.00
+-11.30   0.00
+  0.00   0.00
+  0.00   0.00
+-19.15   0.00
+-19.15   0.00
+-16.67   0.00
+-16.67   0.00
+-14.65   0.00
+-14.65   0.00
+-11.30   0.00
+-11.30   0.00
+ -0.00   0.00
   0.00   0.00
 \end{verbatim}
 }
