--- a/doc/ic1ion.tex
+++ b/doc/ic1ion.tex
@@ -258,7 +258,8 @@ pointcharge=  0.3            3    4    2
 DWF=0.4
 \end{verbatim}
 }
-The output files are written to directory {\prg results} and contain energy eigentstates ({\prg mcphas.icp}) and, optional, %%@
+The output files are written to directory {\prg results} and contain energy eigentstates ({\prg mcphas.icp}) ,
+polycrystal neutron transitions and intensities ({\prg ic1ion.trs}) and, optional, %%@
 the magnetisation ({\prg mcphas.icq}). Note in these
 output files the parameters alpha/beta/gamma
 in the header are not the Steven's operator equivalent factors, but
